<resources>
    <string name="app_name">User data</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="information">User Information</string>
    <string name="submit">Submit</string>
</resources>